--- a/src/components/contacts/contacts.scss
+++ b/src/components/contacts/contacts.scss
@@ -2,7 +2,7 @@
     position: relative;
     color: #54687a;
     height: 100%;
-    margin: 20px 80px;
+    margin: 20px 70px;
     h2 {
         font-family: 'Zen Loop';
         font-size: 50px;
@@ -12,8 +12,8 @@
     &_block {
         display: flex;
         justify-content: space-between;
-
-        box-shadow: 2px 2px 3px 2px #c56f82;
+        font-size: 19px;
+        box-shadow: -2px -2px 2px 2px #84b6bd, 2px 2px 2px 2px #c56f82;
         &__main{
             padding: 20px;
             list-style-type: none;
@@ -27,7 +27,7 @@
         color: #54687a;
         text-decoration: none;
         &:hover {
-            text-shadow: 2px 2px 1px #84b6bd;
+            text-shadow: 1px 1px 1px #84b6bd;
         }
     }
     
