--- a/src/components/examples/examples.scss
+++ b/src/components/examples/examples.scss
@@ -22,12 +22,12 @@
             font-size: 18px;
             line-height: 1.5;
             padding: 10px 0 10px 30px;
-            box-shadow: 2px 2px 2px 2px #c56f82;
+            box-shadow:-2px -2px 2px 1px #84b6bd, 2px 2px 2px 1px #c56f82;
             a {
                 color: #54687a;
                 text-decoration: none;
                 &:hover {
-                    text-shadow: 2px 1px 1px #84b6bd;
+                    text-shadow: 1px 1px 1px #84b6bd;
                 }
             }
         }
@@ -38,7 +38,7 @@
                 text-decoration: none;
                 text-shadow: 1px 1px 1px #c56f82;
                 &:hover {
-                    text-shadow: 2px 1px 1px #84b6bd;
+                    text-shadow: 1px 1px 1px #84b6bd;
                 }
             }
         }
