--- a/src/components/moreinfo/moreinfo.scss
+++ b/src/components/moreinfo/moreinfo.scss
@@ -15,25 +15,27 @@
     }
     &_item {
         text-align: center;
-        box-shadow: 2px 2px 3px 1px #c56f82;
-        border-radius: 15px;
-        img {
+        box-shadow: 2px 2px 2px 1px #84b6bd;
+        border-radius: 10px;
+        padding-bottom: 5px;
+        height: 230px;
+    }
+    &_img {
+        width: 100%;
+        overflow: hidden;
+        height: 180px;
+        object-fit: cover;
+        &:hover {
+            cursor: pointer;
+        }
+        &__active {
+            position: absolute;
             width: 100%;
-            overflow: hidden;
-            height: 180px;
-            object-fit: cover;
-            &:hover {
-                cursor: pointer;
-            }
-            &:active {
-                position: absolute;
-                width: 100%;
-                height: 100%;
-                top: 0;
-                left: 0;
-                box-shadow: 2px 2px 3px 1px #c56f82;
-                border-radius: 15px;
-            }
+            height: 100%;
+            top: 0;
+            left: 0;
+            box-shadow: 2px 2px 2px 1px #84b6bd;
+            border-radius: 10px;
         }
     }
 }
