--- a/src/components/qualities/qualities.scss
+++ b/src/components/qualities/qualities.scss
@@ -21,7 +21,7 @@
         padding: 10px;
         list-style-type: none;
         text-align: center;
-        padding: 10px;
+        padding: 20px 10px;
         img {
             width: 50px;
             border-radius: 100%;
