--- a/src/components/skills/skills.scss
+++ b/src/components/skills/skills.scss
@@ -15,10 +15,10 @@
     &_text {
         width: 520px;
         padding: 10px 30px;
-        box-shadow: 2px 2px 3px 2px #c56f82;
+        box-shadow:-2px -2px 2px 1px #84b6bd, 2px 2px 2px 1px #c56f82;
         &__main {
             font-size: 18px;
-            text-shadow: 1px 1px 1px #84b6bd;
+            text-shadow: 1px 1px #84b6bd;
         }
     }
 }
