--- a/src/components/contacts/contacts.scss
+++ b/src/components/contacts/contacts.scss
@@ -2,7 +2,7 @@
     position: relative;
     color: #54687a;
     height: 100%;
-    margin: 20px 70px;
+    margin: 20px 60px;
     h2 {
         font-family: 'Zen Loop';
         font-size: 50px;
@@ -15,12 +15,12 @@
         font-size: 18px;
         box-shadow: -2px -2px 2px 2px #84b6bd, 2px 2px 2px 2px #c56f82;
         &__main{
-            padding: 20px;
+            padding: 17px 16px;
             list-style-type: none;
         }
         &__social-network {
+            padding: 17px;
             list-style-type: none;
-            padding: 20px;
         }
     }
     a {
