--- a/src/components/moreinfo/moreinfo.scss
+++ b/src/components/moreinfo/moreinfo.scss
@@ -14,6 +14,7 @@
         text-shadow: 2px 2px 2px #84b6bd;
     }
     &_item {
+        width: 100%;
         text-align: center;
         box-shadow: 2px 2px 2px 1px #84b6bd;
         border-radius: 10px;
