--- a/src/components/examples/examples.scss
+++ b/src/components/examples/examples.scss
@@ -10,7 +10,7 @@
         text-shadow: 2px 2px 2px #84b6bd;
     }
     &_info {
-        margin-top: 10px;
+        margin: 15px 50px 0;
         display: flex;
         justify-content: space-around;
         align-items: center;
