--- a/src/components/contacts/contacts.scss
+++ b/src/components/contacts/contacts.scss
@@ -10,8 +10,9 @@
         text-shadow: 2px 2px 2px #84b6bd;
     }
     &_block {
+        margin-top: 10px;
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
         font-size: 18px;
         box-shadow: -2px -2px 2px 2px #84b6bd, 2px 2px 2px 2px #c56f82;
         &__main{
