--- a/src/components/education/education.scss
+++ b/src/components/education/education.scss
@@ -18,7 +18,7 @@
     }
     &_items {
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
         ul {
             padding: 0;
         }
