--- a/src/components/qualities/qualities.scss
+++ b/src/components/qualities/qualities.scss
@@ -2,7 +2,7 @@
     position: relative;
     color: #54687a;
     height: 100%;
-    margin: 0 30px;
+    margin: 30px 30px 0;
     h2 {
         font-family: 'Zen Loop';
         font-size: 50px;
@@ -39,5 +39,5 @@
 }
 #qualities {
     position: absolute;
-    top: -75px;
+    top: -80px;
 }
