--- a/src/components/contacts/contacts.scss
+++ b/src/components/contacts/contacts.scss
@@ -1,27 +1,33 @@
 .contacts {
     position: relative;
-    color: #54687a;
-    height: 100%;
-    margin: 20px 60px;
+    margin: 30px 30px;
     h2 {
-        font-family: 'Zen Loop';
-        font-size: 50px;
+        font-size: 30px;
+        font-weight: normal;
         text-align: center;
         text-shadow: 2px 2px 2px #84b6bd;
+        margin-bottom: 20px;
     }
     &_block {
         margin-top: 10px;
         display: flex;
         justify-content: space-around;
-        font-size: 18px;
-        box-shadow: -2px -2px 2px 2px #84b6bd, 2px 2px 2px 2px #c56f82;
+        box-shadow: -2px -2px 2px 2px #84b6bd, 2px 2px 2px 2px #54687a;
         &__main{
-            padding: 17px 16px;
+            width: 55%;
+            padding: 10px;
             list-style-type: none;
+            & span {
+                font-weight: 500;
+            }
         }
         &__social-network {
-            padding: 17px;
+            width: 45%;
+            padding: 10px;
             list-style-type: none;
+            & span {
+                font-weight: 500;
+            }
         }
     }
     a {
