--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -2,26 +2,39 @@
     background: #54687a;
     width: 900px;
     height: 110px;
-    padding: 52px 20px 0px;
+    padding: 52px 20px 10px;
     position: fixed;
     z-index: 10;
     top: -40px;
     left: 50%;
     transform: translateX(-50%);
-    border-radius: 30%;
-    font-size: 25px;
-    display: flex;
-    justify-content: space-between;
-    list-style-type: none;
-    font-family: 'Zen Loop';
-    box-shadow: 0px 3px 0px #c56f82;
+    border-radius: 50px;
+    font-size: 18px;
+    box-shadow: 0 3px 3px #84b6bd;
+    text-decoration: none;
+    &_first, &_second {
+        width: 575px;
+        list-style-type: none;
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 5px;
+        font-weight: 300;
+        & li {
+            display: inline;
+        }
+    }
+    &_second {
+        width: 695px;
+        margin-left: 150px;
+    }
     &_item {
-        color: #fff;
+        color: #84b6bd;
+        text-shadow: 0.3px 0.3px 0.6px #ffffff;
         text-decoration: none;
         &:hover {
-            text-shadow: 2px 2px 1px #c56f82;
+            color: #fff;
         }
     }
 }
-        
+
 
