--- a/src/components/qualities/qualities.scss
+++ b/src/components/qualities/qualities.scss
@@ -1,31 +1,27 @@
 .qualities {
     position: relative;
-    color: #54687a;
-    height: 100%;
-    margin: 30px 30px 0;
+    margin: 15px 30px;
     h2 {
-        font-family: 'Zen Loop';
-        font-size: 50px;
+        font-size: 30px;
+        font-weight: normal;
         text-align: center;
         text-shadow: 2px 2px 2px #84b6bd;
     }
     &_text {
         width: 600px;
-        margin: 0 auto;
-        margin-top: 10px;
+        margin: 10px auto 0;
         text-align: center;
     }
     &_items {
         display: flex;
         justify-content: space-between;
-        padding: 10px;
         list-style-type: none;
         text-align: center;
         padding: 20px 10px;
         img {
             width: 50px;
             border-radius: 100%;
-            box-shadow: 2px 2px 2px 1px #c56f82;
+            box-shadow: -2px 2px 2px 1px #54687a;
             padding: 3px;
             margin-bottom: 10px;
         }
@@ -40,7 +36,6 @@
         display: block;
         text-align: center;
         span {
-            font-family: 'Zen Loop';
             font-size: 25px;
             color: #84b6bd;
             text-shadow: 1px 1px 1px #54687a;
