--- a/src/components/skills/skills.scss
+++ b/src/components/skills/skills.scss
@@ -1,14 +1,13 @@
 .skills {
     position: relative;
-    color: #54687a;
     height: 100%;
     margin: 30px 60px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     h2 {
-        font-family: 'Zen Loop';
-        font-size: 50px;
+        font-size: 32px;
+        font-weight: normal;
         text-align: center;
         text-shadow: 2px 2px 2px #84b6bd;
         margin-left: 50px;
@@ -16,10 +15,11 @@
     &_text {
         width: 520px;
         padding: 10px 30px;
-        box-shadow:-2px -2px 2px 1px #84b6bd, 2px 2px 2px 1px #c56f82;
+        box-shadow:-2px -2px 2px 1px #84b6bd, 2px 2px 2px 1px #54687a;
         &__main {
-            font-size: 18px;
+            font-size: 16px;
             text-shadow: 1px 1px #84b6bd;
+
         }
     }
 }
