update cv 01.06.2022 after testing

--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -5,34 +5,30 @@
     padding: 52px 20px 10px;
     position: fixed;
     z-index: 10;
-    top: -40px;
+    top: -55px;
     left: 50%;
     transform: translateX(-50%);
     border-radius: 50px;
     font-size: 18px;
     box-shadow: 0 3px 3px #84b6bd;
     text-decoration: none;
-    &_first, &_second {
-        width: 575px;
+    &_list {
         list-style-type: none;
         display: flex;
         justify-content: space-between;
-        margin-bottom: 5px;
         font-weight: 300;
+        font-size: 15.5px;
+        padding: 17px 20px;
         & li {
             display: inline;
         }
     }
-    &_second {
-        width: 695px;
-        margin-left: 150px;
-    }
     &_item {
-        color: #84b6bd;
-        text-shadow: 0.3px 0.3px 0.6px #ffffff;
+        color: #ffffff;
+        text-shadow: 1px 1px 0.6px #84b6bd, 1px 1px 0.6px #84b6bd;
         text-decoration: none;
         &:hover {
-            color: #fff;
+            text-shadow: 1px 1px 0.6px #84b6bd, 1px 1px 0.6px #84b6bd, -0.8px -0.8px 0.6px #c56f82, -0.8px -0.8px 0.6px #c56f82;
         }
     }
 }
