--- a/src/components/education/education.scss
+++ b/src/components/education/education.scss
@@ -19,7 +19,7 @@
         display: flex;
         justify-content: space-around;
         margin-top: 10px;
-        align-items: center;
+        align-items: start;
     }
     &_item {
         width: 260px;
